--- a/responsive-grid-css-website-layout/style.css
+++ b/responsive-grid-css-website-layout/style.css
@@ -11,6 +11,7 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     color: var(--dark);
 }
+
 body {
     background: #ccc;
     margin: 5% 5%;
@@ -32,7 +33,7 @@ img {
 .wrapper {
     display: grid;
     grid-gap: 20px;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 /* Navigation */
@@ -65,7 +66,7 @@ img {
 .top-container {
     display: grid;
     grid-gap: 20px;
-    background-color: black;
+    /* background-color: grey; */
     grid-template-areas:
         'showcase showcase top-box-a'
         'showcase showcase top-box-b';
@@ -78,6 +79,38 @@ img {
     background: url(img/web.jpg);
     background-size: cover;
     background-position: center;
+    padding: 3rem;
+    box-shadow: var(--shadow);
+    display: grid;
+    justify-items: left;
+    align-items: center;
+}
+
+.showcase h1 {
+    font-size: 4rem;
+    margin-top: 4rem;
+    margin-bottom: 0px;
+    color: var(--light);
+}
+
+.showcase p {
+    font-size: 1.3rem;
+    margin-top: 0px;
+    color: var(--light);
+}
+
+/* Top box */
+.top-box {
+    background: var(--primary);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    box-shadow: var(--shadow);
+    padding: 1.5rem;
+}
+
+.top-box .price {
+    font-size: 2.5rem;
 }
 
 .top-box-a {
@@ -86,4 +119,63 @@ img {
 
 .top-box-b {
     grid-area: top-box-b;
+}
+
+/* Boxes */
+.boxes {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.box {
+    background: var(--primary);
+    text-align: center;
+    padding: 1.5rem 2rem;
+    box-shadow: var(--shadow);
+}
+
+/* Info */
+.info {
+    background: var(--primary);
+    box-shadow: var(--shadow);
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;;
+}
+
+/* Portfolio */
+.portfolio {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.portfolio img {
+    width: 100%;
+    box-shadow: var(--shadow);
+}
+
+/* Footer */
+footer {
+    margin-top: 1.5rem;
+    background-color: var(--dark);
+    color: var(--light);
+    text-align: center;
+    padding: 0.5rem;
+}
+
+/* Media Queries */
+@media (max-width: 700px) {
+    .top-container {
+        grid-template-areas:
+        'showcase showcase'
+        'top-box-a top-box-b';
+    }
+
+    .top-container h1 {
+        /* padding-top: 3rem; */
+        font-size: 2.5rem;
+    }
 }
