--- a/responsive-grid-css-website-layout/style.css
+++ b/responsive-grid-css-website-layout/style.css
@@ -142,7 +142,7 @@ img {
     display: grid;
     grid-gap: 30px;
     grid-template-columns: 1fr 1fr;
-    padding: 3rem;;
+    padding: 3rem;
 }
 
 /* Portfolio */
@@ -174,8 +174,51 @@ footer {
         'top-box-a top-box-b';
     }
 
-    .top-container h1 {
-        /* padding-top: 3rem; */
+    .showcase {
+        min-height: 350px;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .showcase h1 {
         font-size: 2.5rem;
+    }
+
+    .main-nav ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .info {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .main-nav ul {
+        grid-template-columns: 1fr;
+    }
+
+    .top-container {
+        grid-template-areas:
+        'showcase'
+        'top-box-a'
+        'top-box-b';
+    }
+
+    .top-container > div {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .top-container .btn {
+        justify-self: stretch;
+        text-align: center;
+    }
+
+    .info .btn {
+        display: block;
+        text-align: center;
+        margin: auto;
     }
 }
